# mvw

./: .clang-format  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Procfile.in  README.md  package-lock.json  package.json
cmake/: FindGlfw3.cmake  FindZeroMQ.cmake
include/: config.hpp  cubemap_buffer.hpp  data_input.hpp  discovered_bindings.hpp  discovered_uniform.hpp  gl_state.hpp  log.hpp  mvw_buffer.hpp  options.hpp  tiny_geometry.hpp  ui.hpp  uniforms.hpp  viewer_state.hpp  viewer_window.hpp
include/detail/: discovered_uniform.hpp  rsize.hpp
include/mvw/: assimp_geometry.hpp  geometry.hpp  mvw_geometry.hpp  test_geometry.hpp  tiny_geometry.hpp  vertex_data.hpp
include/net/: server.hpp
shaders/: 20_vertex.glsl  fragment.glsl  shader-gradient.glsl  vertex.glsl
src/: cubemap_buffer.cpp  main.cpp  tiny_geometry.cpp  ui.cpp
src/cpp/: CMakeLists.txt  data_input.cpp  discovered_bindings.cpp  discovered_uniform.cpp  gl_state.cpp  main.cpp  mvw_buffer.cpp  options.cpp  uniforms.cpp  viewer_state.cpp  viewer_window.cpp
src/cpp/mvw/: assimp_geometry.cpp  geometry.cpp  mvw_geometry.cpp  test_geometry.cpp
src/cpp/net/: server.cpp
src/glsl/: CMakeLists.txt  gabor-noise-solid.glsl  gabor-noise-surface.glsl  gradient.glsl  input-roundtrip.glsl  ld11-gabor.glsl  phasor-noise-data.glsl  phasor-noise-overlay.glsl  phasor-noise-solid.glsl  pp-contrast.glsl  pp-identity.glsl  pp-phasor.glsl  solid-simplex.glsl  solid.glsl
src/glsl/core/: debug.glsl  hash.glsl  math.glsl
src/glsl/gabor/: grid.glsl  kernel.glsl  orient.glsl  params.glsl
src/glsl/pg/2d/: white.glsl
src/glsl/pg/3d/: data.glsl  white.glsl
src/glsl/pp/: color.glsl  lighting.glsl  params.glsl
src/glsl/prng/: hash.glsl  lcg.glsl  none.glsl  poisson.glsl  xoroshiro.glsl  xorshift.glsl
src/glsl/util/: cgabor_main.glsl  debug.glsl  gabor_main.glsl
src/jl/: Antialiasing.ipynb  Comparison LD11.ipynb  Manifest.toml  Project.toml  artifacts.jl  basic.jl  testimg.jl
src/jl/MVW.jl/: Manifest.toml  Project.toml
src/jl/MVW.jl/src/: MVW.jl  RPC.jl
src/jl/MVW.jl/test/: runtests.jl
src/js/: glslify-deps.js
src/mvw/: assimp_geometry.cpp  geometry.cpp  mvw_geometry.cpp  tiny_geometry.cpp
